--- a/index.html
+++ b/index.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
+
     <title>Document</title>
   </head>
   <body>
-    <div id="alert" class="alert-box">
-      <p class="title">텍스트입니다.</p>
-      <button class="close">닫기</button>
-    </div>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <span class="navbar-brand">Navbar</span>
+        <button class="navbar-toggler" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
 
-    <button onclick="displayFunc('block', '아이디')">버튼1</button>
-    <button onclick="displayFunc('block', '비밀번호')">버튼2</button>
+    <ul class="list-group">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A fourth item</li>
+      <li class="list-group-item">And a fifth one</li>
+    </ul>
 
     <script>
-      // 이벤트 리스너 == 감시자
-      // 클릭, 스크롤, 키입력 등의 이벤트가 발생하면 → 입력한 함수를 실행
+      // 자바스크립트에서 클래스 탈부착, 토글을 하려면 classList
+      //   querySelector는 일치하는 요소 중 맨 위 하나만 찾음
+      // querySelectorAll('Element')[인덱싱]하면 원하는 요소 찾기 가능
       document
-        .getElementsByClassName("close")[0]
+        .querySelector(".navbar-toggler")
         .addEventListener("click", function () {
-          document.getElementById("alert").style.display = "none";
+          document.querySelector(".list-group").classList.toggle("show");
         });
-
-      function displayFunc(attr, text) {
-        document.getElementById("alert").style.display = attr;
-        // ClassName은 인덱싱을 해야함
-        document.getElementsByClassName("title")[0].innerHTML = text;
-      }
     </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
