--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.3.slim.min.js"
+      integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo="
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
+    <div class="black-bg">
+      <div class="white-bg">
+        <h4>로그인하세요</h4>
+        <button class="btn btn-danger" id="close">닫기</button>
+      </div>
+    </div>
+
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <span class="navbar-brand">Navbar</span>
@@ -32,21 +48,21 @@
       <li class="list-group-item">And a fifth one</li>
     </ul>
 
+    <button id="login">로그인</button>
+
     <script>
-      // 자바스크립트에서 클래스 탈부착, 토글을 하려면 classList
-      //   querySelector는 일치하는 요소 중 맨 위 하나만 찾음
-      // querySelectorAll('Element')[인덱싱]하면 원하는 요소 찾기 가능
+      document.querySelector("#login").addEventListener("click", function () {
+        document.querySelector(".black-bg").classList.add("show");
+      });
+      document.querySelector("#close").addEventListener("click", function () {
+        document.querySelector(".black-bg").style.display = "none";
+      });
+
       document
         .querySelector(".navbar-toggler")
         .addEventListener("click", function () {
           document.querySelector(".list-group").classList.toggle("show");
         });
     </script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
