form태그, if/else문(공백검사 등)

--- a/index.html
+++ b/index.html
@@ -27,9 +27,35 @@
     <div class="black-bg">
       <div class="white-bg">
         <h4>로그인하세요</h4>
-        <button class="btn btn-danger" id="close">닫기</button>
+        <form action="success.html">
+          <div class="my-3">
+            <input type="text" class="form-control" />
+          </div>
+          <div class="my-3">
+            <input type="password" class="form-control" />
+          </div>
+          <button type="submit" class="btn btn-primary" id="send">전송</button>
+          <button type="button" class="btn btn-danger" id="close">닫기</button>
+        </form>
       </div>
     </div>
+
+    <script>
+      document.querySelector("form").addEventListener("submit", function (e) {
+        if (document.querySelectorAll(".form-control")[0].value == "") {
+          e.preventDefault();
+          alert("아이디를 입력하세요.");
+        } else if (document.querySelectorAll(".form-control")[1].value == "") {
+          e.preventDefault();
+          alert("비밀번호를 입력하세요.");
+        } else if (
+          document.querySelectorAll(".form-control")[1].value.length < 6
+        ) {
+          e.preventDefault();
+          alert("비밀번호 길이 짧음.");
+        }
+      });
+    </script>
 
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
@@ -48,14 +74,17 @@
       <li class="list-group-item">And a fifth one</li>
     </ul>
 
-    <button id="login">로그인</button>
+    <div class="main-bg">
+      <h4>Shirts on Sale</h4>
+      <button class="btn btn-danger" id="login">로그인</button>
+    </div>
 
     <script>
       document.querySelector("#login").addEventListener("click", function () {
-        document.querySelector(".black-bg").classList.add("show");
+        document.querySelector(".black-bg").classList.add("show-modal");
       });
       document.querySelector("#close").addEventListener("click", function () {
-        document.querySelector(".black-bg").style.display = "none";
+        document.querySelector(".black-bg").classList.remove("show-modal");
       });
 
       document
