--- a/list.html
+++ b/list.html
@@ -29,10 +29,6 @@
     </div>
 
     <script>
-      $.get("https://codingapple1.github.io/price.json").done(function (price) {
-        console.log(price.price);
-      });
-
       var products = [
         { id: 0, price: 70000, title: "Blossom Dress" },
         { id: 1, price: 50000, title: "Springfield Shirt" },
@@ -40,52 +36,43 @@
       ];
 
       var row = document.querySelector(".row");
-      products.forEach(function (data, i) {
-        var card = `<div class="col-sm-4">
-          <img src="https://via.placeholder.com/600" class="w-100" />
-          <h5>${products[i].title}</h5>
-          <p>${products[i].price}</p>
-        </div>`;
-        console.log(data);
-        row.insertAdjacentHTML("beforeend", card);
-      });
+
+      function Card(products) {
+        products.forEach(function (data, i) {
+          var card = `<div class="col-sm-4">
+                        <img src="https://via.placeholder.com/600" class="w-100" />
+                        <h5>${products[i].title}</h5>
+                        <p>${products[i].price}</p>
+                    </div>`;
+          row.insertAdjacentHTML("beforeend", card);
+        });
+      }
+      Card(products);
     </script>
 
+    <div class="container">
+      <button class="btn btn-danger">더보기</button>
+    </div>
     <script>
-      // ajax GET 요청하는 방법
-      // 1. $.get("GET 요청할 주소").done(function() {})
-      // 2. done()에는 GET 요청이 성공할 경우 실행할 코드 작성
-      // 3. data는 함수의 매개변수에 저장됨
-      $.get("https://codingapple1.github.io/hello.txt").done(function (data) {
-        console.log(data);
-      });
-
-      // ajax POST 요청하는 방법
-      // 1. $.post("POST 요청할 주소", "전달할 내용").done(function() {})
-      $.post("https://codingapple1.github.io/hello.txt", { name: "kim" }).done(
-        function (data) {
-          console.log(data);
-        }
-      );
-
-      // ajax 요청 실패 시 특정 코드 실행하기
-      // 1. .fail(function() {"요청 실패 시 실행할 코드"})
-      $.get("dummy text")
-        .done(function (data) {
-          console.log(data);
-        })
-        .fail(function () {
-          console.log("ajax 요청 실패");
-        });
-
-      // 자바스크립트로 ajax 요청하는 방법
-      fetch("https://codingapple1.github.io/price.json")
-        .then((res) => res.json())
-        .then(function (data) {
-          console.log(data);
-        })
-        .catch(function (error) {
-          console.log("실패함");
+      var count = 0;
+      document
+        .querySelector(".btn-danger")
+        .addEventListener("click", function () {
+          count++;
+          if (count == 1) {
+            $.get("https://codingapple1.github.io/js/more1.json").done(
+              function (data) {
+                Card(data);
+              }
+            );
+          } else {
+            $.get("https://codingapple1.github.io/js/more2.json").done(
+              function (data) {
+                Card(data);
+                document.querySelector(".btn-danger").style.display = "none";
+              }
+            );
+          }
         });
     </script>
   </body>
