상품 더보기, sort, map, filter

--- a/list.html
+++ b/list.html
@@ -28,14 +28,86 @@
       <div class="row"></div>
     </div>
 
+    <div class="container">
+      <button class="btn btn-primary sort-by-price">가격 낮은순 정렬</button>
+    </div>
+
+    <div class="container">
+      <button class="btn btn-primary sort-by-name">이름 내림차순 정렬</button>
+    </div>
+
+    <div class="container">
+      <button class="btn btn-primary sort-by-under">6만원 이하만 보기</button>
+    </div>
+
     <script>
+      var row = document.querySelector(".row");
       var products = [
         { id: 0, price: 70000, title: "Blossom Dress" },
         { id: 1, price: 50000, title: "Springfield Shirt" },
         { id: 2, price: 60000, title: "Black Monastery" },
       ];
 
-      var row = document.querySelector(".row");
+      document
+        .querySelector(".sort-by-price")
+        .addEventListener("click", function () {
+          products.sort(function (a, b) {
+            return a.price - b.price;
+          });
+
+          $(".row").html("");
+
+          products.forEach(function (data, i) {
+            var card = `<div class="col-sm-4">
+                        <img src="https://via.placeholder.com/600" class="w-100" />
+                        <h5>${products[i].title}</h5>
+                        <p>${products[i].price}</p>
+                    </div>`;
+            row.insertAdjacentHTML("beforeend", card);
+          });
+        });
+
+      document
+        .querySelector(".sort-by-name")
+        .addEventListener("click", function () {
+          products.sort(function (a, b) {
+            if (a.title < b.title) {
+              return 1;
+            } else {
+              return -1;
+            }
+          });
+
+          $(".row").html("");
+
+          products.forEach(function (data, i) {
+            var card = `<div class="col-sm-4">
+                        <img src="https://via.placeholder.com/600" class="w-100" />
+                        <h5>${products[i].title}</h5>
+                        <p>${products[i].price}</p>
+                    </div>`;
+            row.insertAdjacentHTML("beforeend", card);
+          });
+        });
+
+      document
+        .querySelector(".sort-by-under")
+        .addEventListener("click", function () {
+          var newProducts = products.filter(function (data) {
+            return data.price <= 60000;
+          });
+
+          $(".row").html("");
+
+          newProducts.forEach(function (data, i) {
+            var card = `<div class="col-sm-4">
+                        <img src="https://via.placeholder.com/600" class="w-100" />
+                        <h5>${newProducts[i].title}</h5>
+                        <p>${newProducts[i].price}</p>
+                    </div>`;
+            row.insertAdjacentHTML("beforeend", card);
+          });
+        });
 
       function Card(products) {
         products.forEach(function (data, i) {
@@ -51,29 +123,47 @@
     </script>
 
     <div class="container">
-      <button class="btn btn-danger">더보기</button>
+      <button class="btn btn-danger more">더보기</button>
     </div>
     <script>
       var count = 0;
-      document
-        .querySelector(".btn-danger")
-        .addEventListener("click", function () {
-          count++;
-          if (count == 1) {
-            $.get("https://codingapple1.github.io/js/more1.json").done(
-              function (data) {
-                Card(data);
-              }
-            );
-          } else {
-            $.get("https://codingapple1.github.io/js/more2.json").done(
-              function (data) {
-                Card(data);
-                document.querySelector(".btn-danger").style.display = "none";
-              }
-            );
-          }
-        });
+      document.querySelector(".more").addEventListener("click", function () {
+        count++;
+        if (count == 1) {
+          $.get("https://codingapple1.github.io/js/more1.json").done(function (
+            data
+          ) {
+            Card(data);
+          });
+        } else {
+          $.get("https://codingapple1.github.io/js/more2.json").done(function (
+            data
+          ) {
+            Card(data);
+            document.querySelector(".btn-danger").style.display = "none";
+          });
+        }
+      });
+    </script>
+
+    <script>
+      // array 자료에서 원하는 것만 필터링 하려면 .filter()
+      // → 활용 예) 특정 가격의 상품만 조회하기
+      // 1. 파라미터에 array의 데이터가 저장됨
+      // 2. return "조건식"
+      // 3. 결과는 변수에 담아 사용 (sort와 달리 원본을 변형하지 않음)
+      var arr1 = [7, 3, 5, 2, 40];
+      var filterArr = arr1.filter(function (data) {
+        return data < 4;
+      });
+      console.log(filterArr);
+
+      // array 자료를 전부 변형하려면 .map()
+      // → 활용 예) 달러를 원화로 수정하기
+      var mapArr = arr1.map(function (data) {
+        return data * 4;
+      });
+      console.log(mapArr);
     </script>
   </body>
 </html>
