--- a/list.html
+++ b/list.html
@@ -48,6 +48,38 @@
         { id: 2, price: 60000, title: "Black Monastery" },
       ];
 
+      function Card(products) {
+        products.forEach(function (data, i) {
+          var card = `<div class="col-sm-4">
+                        <img src="https://via.placeholder.com/600" class="w-100" />
+                        <h5>${products[i].title}</h5>
+                        <p>${products[i].price}</p>
+                        <button class="btn btn-primary buy">구매</button>
+                    </div>`;
+          row.insertAdjacentHTML("beforeend", card);
+        });
+      }
+
+      // 로컬 스토리지 사용 방법
+      // 1. 자료 저장 setItem("key", "value")
+      localStorage.setItem("name", "kim");
+      // 2. 자료 조회 getItem("key")
+      console.log(localStorage.getItem("name"));
+      // 3. 자료 삭제 removeItem("key")
+      localStorage.removeItem("name");
+
+      // 로컬 스토리지 array/object 사용 방법
+      // 1. array/object를 JSON으로 변환 → JSON.stringify()
+      //    → JSON으로 변환하면 문자 취급을 받으므로 로컬 스토리지에 저장 가능
+      var arr = [1, 2, 3];
+      var newArr = JSON.stringify(arr);
+      localStorage.setItem("num", newArr);
+      // 2. getItem 사용하려면 JSON을 array/object 자료형으로 변환 →
+      var result = localStorage.getItem("num");
+      result = JSON.parse(result);
+      console.log(result);
+      localStorage.removeItem("num");
+
       document
         .querySelector(".sort-by-price")
         .addEventListener("click", function () {
@@ -57,14 +89,7 @@
 
           $(".row").html("");
 
-          products.forEach(function (data, i) {
-            var card = `<div class="col-sm-4">
-                        <img src="https://via.placeholder.com/600" class="w-100" />
-                        <h5>${products[i].title}</h5>
-                        <p>${products[i].price}</p>
-                    </div>`;
-            row.insertAdjacentHTML("beforeend", card);
-          });
+          Card(products);
         });
 
       document
@@ -80,14 +105,7 @@
 
           $(".row").html("");
 
-          products.forEach(function (data, i) {
-            var card = `<div class="col-sm-4">
-                        <img src="https://via.placeholder.com/600" class="w-100" />
-                        <h5>${products[i].title}</h5>
-                        <p>${products[i].price}</p>
-                    </div>`;
-            row.insertAdjacentHTML("beforeend", card);
-          });
+          Card(products);
         });
 
       document
@@ -99,27 +117,22 @@
 
           $(".row").html("");
 
-          newProducts.forEach(function (data, i) {
-            var card = `<div class="col-sm-4">
-                        <img src="https://via.placeholder.com/600" class="w-100" />
-                        <h5>${newProducts[i].title}</h5>
-                        <p>${newProducts[i].price}</p>
-                    </div>`;
-            row.insertAdjacentHTML("beforeend", card);
-          });
+          Card(newProducts);
         });
 
-      function Card(products) {
-        products.forEach(function (data, i) {
-          var card = `<div class="col-sm-4">
-                        <img src="https://via.placeholder.com/600" class="w-100" />
-                        <h5>${products[i].title}</h5>
-                        <p>${products[i].price}</p>
-                    </div>`;
-          row.insertAdjacentHTML("beforeend", card);
-        });
-      }
       Card(products);
+
+      // 로컬 스토리지 장바구니 기능
+      $(".buy").click(function (e) {
+        var title = $(e.target).siblings("h5").text();
+        if (localStorage.getItem("cart") != null) {
+          var output = JSON.parse(localStorage.cart);
+          output.push(title);
+          localStorage.setItem("cart", JSON.stringify(output));
+        } else {
+          localStorage.setItem("cart", JSON.stringify([title]));
+        }
+      });
     </script>
 
     <div class="container">
