--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
     <div style="overflow: hidden">
       <div class="slide-container">
         <div class="slide-box">
-          <img src="/img/car1.png" alt="이미지1" />
+          <img src="/img/car1.png" alt="이미지1" draggable="false" />
         </div>
         <div class="slide-box">
-          <img src="/img/car2.png" alt="이미지1" />
+          <img src="/img/car2.png" alt="이미지2" draggable="false" />
         </div>
         <div class="slide-box">
-          <img src="/img/car3.png" alt="이미지1" />
+          <img src="/img/car3.png" alt="이미지3" draggable="false" />
         </div>
       </div>
     </div>
@@ -233,6 +233,82 @@
         current = 3;
         document.querySelector(".slide-container").style.transform =
           "translateX(-200vw)";
+      });
+
+      // mousedown 이벤트는 마우스 버튼을 눌렀을 때 발생
+      // mouseup 이벤트는 마우스 버튼을 뗐을 때 발생
+      // mousemove 이벤트는 마우스를 움직일 때 발생
+      // e.clientX는 이벤트가 발생했을 때의 마우스 좌표를 나타냄
+      var start_coord = 0;
+      var end_coord = 0;
+      var slide_box = document.querySelectorAll(".slide-box");
+      var isClick = false;
+
+      document;
+      slide_box[0].addEventListener("mousedown", function (e) {
+        start_coord = e.clientX;
+        isClick = true;
+      });
+
+      slide_box[0].addEventListener("mousemove", function (e) {
+        if (isClick == true) {
+          document.querySelector(
+            ".slide-container"
+          ).style.transform = `translateX(${e.clientX - start_coord}px)`;
+        }
+      });
+
+      slide_box[0].addEventListener("mouseup", function (e) {
+        isClick = false;
+        if (e.clientX - start_coord < -100) {
+          document.querySelector(".slide-container").style.transition =
+            "all 0.5s";
+          document.querySelector(".slide-container").style.transform =
+            "translateX(-100vw)";
+        } else {
+          document.querySelector(".slide-container").style.transition =
+            "all 0.5s";
+          document.querySelector(".slide-container").style.transform =
+            "translateX(0vw)";
+        }
+        setTimeout(function () {
+          document.querySelector(".slide-container").style.transition = "none";
+        }, 500);
+      });
+
+      // 모바일 터치 이벤트로 구현
+      document;
+      slide_box[0].addEventListener("touchstart", function (e) {
+        start_coord = e.touches[0].clientX;
+        isClick = true;
+      });
+
+      slide_box[0].addEventListener("touchmove", function (e) {
+        if (isClick == true) {
+          document.querySelector(
+            ".slide-container"
+          ).style.transform = `translateX(${
+            e.touches[0].clientX - start_coord
+          }px)`;
+        }
+      });
+
+      slide_box[0].addEventListener("touchend", function (e) {
+        isClick = false;
+        if (e.changedTouches[0].clientX - start_coord < -100) {
+          document.querySelector(".slide-container").style.transition =
+            "all 0.5s";
+          document.querySelector(".slide-container").style.transform =
+            "translateX(-100vw)";
+        } else {
+          document.querySelector(".slide-container").style.transition =
+            "all 0.5s";
+          document.querySelector(".slide-container").style.transform =
+            "translateX(0vw)";
+        }
+        setTimeout(function () {
+          document.querySelector(".slide-container").style.transition = "none";
+        }, 500);
       });
     </script>
   </body>
